welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:24: error: Boolean does not take parameters
} else (litMessage == "X") {
                           ^